# cli

./: .gitignore  .goreleaser.yaml  .semgrepignore  AGENTS.md  DEVELOPMENT.md  README.md  flake.nix  go.mod  go.sum
.cursor/commands/: qa.md
.github/: vuln-remediation.json
.github/workflows/: fix-ci.yaml  release.yaml  semgrep.yml  test.yaml  vuln-remediation.yml
cmd/: agent_auth.go  agents.go  agents_auth.go  api_keys.go  api_keys_test.go  app.go  audit_logs.go  audit_logs_download.go  audit_logs_download_test.go  audit_logs_filelock_other.go  audit_logs_filelock_unix.go  audit_logs_filelock_windows.go  audit_logs_test.go  auth.go  auth_connections.go  auth_connections_test.go  browser_pools.go  browser_pools_test.go  browsers.go  browsers_telemetry.go  browsers_telemetry_test.go  browsers_test.go  color_test.go  completion.go  create.go  create_test.go  credential_providers.go  credential_providers_test.go  credentials.go  deploy.go  extensions.go  extensions_test.go  flag_values.go  invoke.go  login.go  logout.go  logs.go  noninteractive_test.go  output.go  output_test.go  (+12 more)
cmd/claude/: chat.go  claude.go  extract.go  launch.go  load.go  send.go  status.go
cmd/hypeman/: build.go  device.go  hypeman.go  image.go  ingress.go  instance.go  resource.go  volume.go
cmd/kernel/: main.go
cmd/mcp/: server.go
cmd/proxies/: check.go  check_test.go  common_test.go  create.go  create_test.go  delete.go  delete_test.go  format.go  get.go  (+6 more)
pkg/templates/python/cua/: .env.example  README.md  _gitignore  main.py  pyproject.toml  session.py  tools.py
pkg/templates/python/cua/providers/: __init__.py  anthropic.py  gemini.py  openagi.py  openai.py  openai_provider.py  tzafon.py  yutori.py
pkg/templates/python/eval-protocol/: .env.example  README.md  _gitignore  main.py  pyproject.toml  tasks.jsonl
pkg/templates/python/eval-protocol/agent_auth/: __init__.py  config.py
pkg/templates/python/eval-protocol/core/: __init__.py  actions.py  agent.py  browser.py  fireworks_api.py  prompts.py  utils.py
pkg/templates/python/eval-protocol/core/reward_models/: __init__.py  webjudge.py
pkg/templates/python/lead-scraper/: .env.example  README.md  _gitignore  formaters.py  loop.py  main.py  models.py  pyproject.toml  session.py
pkg/templates/python/lead-scraper/tools/: __init__.py  groups.py
pkg/templates/python/yutori-computer-use/: README.md  _gitignore  loop.py  main.py  pyproject.toml  session.py
pkg/templates/python/yutori-computer-use/tools/: __init__.py  base.py  computer.py  playwright_computer.py
scripts/: go-mod-replace-kernel.sh
web-bot-auth/: background.mjs  http-message-signatures-extension.crx  update.xml
(+326 files in other folders)
