[project]
name = "python-cua"
version = "0.1.0"
description = "Unified CUA template with multi-provider fallback for Kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "google-genai>=1.71.0",
    "httpx>=0.28.1",
    "kernel>=0.47.0",
    "oagi>=0.1.0",
    "openai>=2.30.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.2.2",
    "tzafon>=2.31.0",
]
