[project]
name = "lead-scraper"
version = "0.1.0"
description = "Generic Lead Scraper - Extract leads from any website using Anthropic Computer Use"
requires-python = ">=3.11"
dependencies = [
    "kernel>=0.25.0",
    "anthropic>=0.75.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.1",
]

[tool.setuptools]
packages = ["."]
