[project]
name = "python-yutori-cua"
version = "0.1.0"
description = "Kernel reference app for Yutori n1 Computer Use"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.58.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0",
    "kernel>=0.24.0",
    "python-dotenv>=1.2.1",
]
